# ghcjs-1

./: .gitignore  README.md
ghcjsdom/: LICENSE  Main.hs  ghcjsdom.cabal  stack.yaml
reactflux/: LICENSE  Main.hs  README.txt  make.sh  package.json  reactflux.cabal  stack.yaml
reactflux/i18n/: core.json
reactflux/src/: deps.js
reactfluxgum/: make.sh  package.json  reactfluxgum.cabal  stack.yaml
reactfluxgum/src/: ActionMonad.hs  Ajax.hs  Async.hs  Main.hs  Msg.hs  deps.js  index.html
refl/: Main.hs  README.txt  refl.cabal
refl2/: refl2.cabal  stack.yaml
