name:                reactflux
version:             0.1.0.0
synopsis:            bla
-- description:
license:             BSD3
license-file:        LICENSE
author:              Daniel van den Eijkel
maintainer:          dvde@gmx.net
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable main
  main-is:             Main.hs
  ghc-options:
    -O2
    -fforce-recomp
--    -threaded
--  other-modules:       
  -- other-extensions:
  build-depends:       base, ghcjs-dom, react-flux, ghcjs-base, deepseq
--  hs-source-dirs:      src
  default-language:    Haskell2010
